# 42-Cub3D

./: CMakeLists.txt  Makefile  cub3d  cub3d.h  main.c
archives/srcs/: main.c  ray.c  ray2.c
maps/: map1.cub  wolf1-2.cub
parsing/gnl/: README.md  get_next_line.c  get_next_line.h
parsing/mlx/: mlx.h
parsing/srcs/: 0_parser_main.c  0_parser_maps.h  A_error_manager.c  A_height_calculator.c  A_stock_arguments.c  A_tools_fct.c  C_checker_color.c  C_parser_color.c  M_parser_map.c  M_stock_map.c  Makefile  S_checker_sprite.c  S_parser_sprite.c  Z_maps
srcs/: draw.c  draw2.c  draw_fp.c  draw_minimap.c  error.c  exit.c  keyboard.c  main.c  move.c  ray.c  ray2.c  render.c  render_column.c
srcs/parsing/: 0_parser_main.c  A_error_manager.c  A_height_calculator.c  A_stock_arguments.c  A_str_search_keyWords.c  A_tools_fct.c  A_tools_fct3.c  C_checker_color.c  C_parser_color.c  M_parser_map.c  M_stock_map.c  S_checker_sprite.c  S_parser_sprite.c
